# deptool

./: .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rcl  build.rs  flake.nix  mkdocs.yml  rust-toolchain.toml
claude_notes/: apply.md  setup.md
docs/: apply.md  building.md  changelog.md  cli.md  config_trees.md  deployment.md  deployment_phases.md  directory_layout.md  index.md  manifest.md  manifests.md  rollback.md  setup.md  store.md  transport.md  tutorial.md  user_management.md
docs/cmd/: deptool.md  deptool_deploy.md  deptool_diff.md  deptool_init.md  deptool_ping.md  deptool_status.md  deptool_sync.md
src/: agent.rs  apply.rs  checkout.rs  deploy.rs  display.rs  error.rs  lib.rs  log.rs  main.rs  oid.rs  ping.rs  plan.rs  prim.rs  protocol.rs  session.rs  setup.rs  status.rs  store.rs  sync.rs  testutil.rs
tests/: deploy.rs
