[package]
name = "deptool"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A simple deployment tool"
license = "Apache-2.0"
edition = "2024"

[dependencies]
hmac-sha256 = { version = "1", features = ["opt_size"] }
bpaf = { version = "0.9", features = ["derive"] }
git2 = { version = "0.20", default-features = false }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
