[package]
name = "deptool"
version = "0.1.0"
authors = ["Ruud van Asseldonk <dev@veniogames.com>"]
description = "A simple deployment tool"
license = "Apache-2.0"
edition = "2024"

[dependencies]
hmac-sha256 = { version = "1", features = ["opt_size"] }
bpaf = { version = "0.9", features = ["derive"] }
base64 = "0.22"
git2 = { version = "0.20", default-features = false }
libc = "0.2"
serde = { version = "1", features = ["derive"] }
parking_lot = "0.12"
serde_json = "1"

[profile.release]
# In release, optimize for size. We need to install the binary on the target
# hosts, and transfer time matters. The application is mostly IO, so we don't
# need to optimize for fast code.
codegen-units = 1
lto = "fat"
opt-level = "z"
panic = "abort"
strip = "symbols"
